Добавлена анимация чисел при смене периода метрик на главном экране
• Анимация происходит только при клике на statsTitle
• Используется ValueAnimator для плавного перехода значений
• Добавлен флаг shouldAnimateNextMetrics во ViewModel
• Анимация не воспроизводится при возврате из других экранов или загрузке данных

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,9 +74,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Monthly"
+                android:paddingVertical="5dp"
                 android:textColor="@color/White"
                 android:textSize="16sp"
-                tools:text="Monthly" />
+                tools:text="Monthly"
+                android:clickable="true"
+                android:focusable="true"
+                android:gravity="center"
+                android:background="@drawable/bg_selectable_rounded"
+                 />
 
             <!-- Сумма -->
             <TextView
