--- a/app/src/main/res/drawable/ripple_primary_20_55.xml
+++ b/app/src/main/res/drawable/ripple_primary_20_55.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/Accent_S_100">
+    android:color="@color/Primary_20_55">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
