--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -31,6 +31,7 @@
         android:layout_marginStart="12dp"
         android:text="About Us"
         android:textColor="@color/Gray_30"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/back_button"
         app:layout_constraintStart_toEndOf="@id/back_button"
         app:layout_constraintTop_toTopOf="@id/back_button" />
