--- a/app/src/main/res/layout/fragment_add_sub_create.xml
+++ b/app/src/main/res/layout/fragment_add_sub_create.xml
@@ -61,6 +61,7 @@
                 android:layout_marginStart="12dp"
                 android:text="New Subscription"
                 android:textColor="@color/Gray_30"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/back_button"
                 app:layout_constraintStart_toEndOf="@+id/back_button"
                 app:layout_constraintTop_toTopOf="@id/back_button" />
@@ -150,11 +151,12 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/currency_button"
-                style="@style/TextAppearance.Headline2"
+                style="@style/TextAppearance.Headline3"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="16dp"
                 android:text="USD"
+                android:textAllCaps="false"
                 android:textStyle="bold"
                 app:backgroundTint="@color/Gray_55"
                 app:cornerRadius="12dp"
@@ -172,60 +174,52 @@
     <!-- Нижняя карточка с деталями подписки -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/details_card"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/Gray_80"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/save_button"
+        app:layout_constraintEnd_toEndOf="@id/end_border"
+        app:layout_constraintStart_toStartOf="@id/start_border"
         app:layout_constraintTop_toBottomOf="@id/top_card">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <!-- Отcтупы -->
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/start_border"
-                android:layout_width="wrap_content"
+
+        <!-- Поля информации о подписке -->
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/details_card_inside"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_16dp"
+            app:cardBackgroundColor="@color/Gray_75"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.core.widget.NestedScrollView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_begin="16dp" />
+                android:fillViewport="true">
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/end_border"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_end="16dp" />
-
-
-            <!-- Поля информации о подписке -->
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/details_card_inside"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:cardBackgroundColor="@color/Gray_75"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="8dp"
-                app:layout_constraintEnd_toEndOf="@id/end_border"
-                app:layout_constraintStart_toStartOf="@id/start_border"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:padding="20dp">
+                    android:orientation="vertical"
+                    android:paddingHorizontal="8dp"
+                    android:paddingVertical="@dimen/dimen_20dp">
 
                     <!-- Описание подписки -->
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/description_container"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@drawable/bg_selectable_rounded"
                         android:clickable="true"
+                        android:clipToOutline="true"
                         android:focusable="true"
+                        android:paddingHorizontal="8dp"
                         android:paddingVertical="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -233,7 +227,7 @@
 
                         <TextView
                             android:id="@+id/description_label"
-                            style="@style/TextAppearance.Headline2"
+                            style="@style/TextAppearance.Headline3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Description"
@@ -244,7 +238,7 @@
 
                         <TextView
                             android:id="@+id/description_value"
-                            style="@style/TextAppearance.BodySmall"
+                            style="@style/TextAppearance.Headline2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -263,7 +257,6 @@
                             android:id="@+id/arrow_description"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
                             android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -275,11 +268,14 @@
                     <!-- Первый платеж -->
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/first_payment_container"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/dimen_16dp"
+                        android:background="@drawable/bg_selectable_rounded"
                         android:clickable="true"
+                        android:clipToOutline="true"
                         android:focusable="true"
+                        android:paddingHorizontal="8dp"
                         android:paddingVertical="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -287,7 +283,7 @@
 
                         <TextView
                             android:id="@+id/first_payment_label"
-                            style="@style/TextAppearance.Headline2"
+                            style="@style/TextAppearance.Headline3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="First payment"
@@ -298,7 +294,7 @@
 
                         <TextView
                             android:id="@+id/first_payment_value"
-                            style="@style/TextAppearance.BodySmall"
+                            style="@style/TextAppearance.Headline2"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -313,7 +309,6 @@
                             android:id="@+id/arrow_first_payment"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
                             android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -326,11 +321,14 @@
                     <!-- Период оплаты -->
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/payment_period_container"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/dimen_16dp"
+                        android:background="@drawable/bg_selectable_rounded"
                         android:clickable="true"
+                        android:clipToOutline="true"
                         android:focusable="true"
+                        android:paddingHorizontal="8dp"
                         android:paddingVertical="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -338,7 +336,7 @@
 
                         <TextView
                             android:id="@+id/payment_period_label"
-                            style="@style/TextAppearance.Headline2"
+                            style="@style/TextAppearance.Headline3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Payment period"
@@ -349,7 +347,7 @@
 
                         <TextView
                             android:id="@+id/payment_period_value"
-                            style="@style/TextAppearance.BodySmall"
+                            style="@style/TextAppearance.Headline2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -366,7 +364,6 @@
                             android:id="@+id/arrow_payment_period"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
                             android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -379,11 +376,14 @@
                     <!-- Напоминания -->
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/reminder_container"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
+                        android:layout_marginTop="@dimen/dimen_16dp"
+                        android:background="@drawable/bg_selectable_rounded"
                         android:clickable="true"
+                        android:clipToOutline="true"
                         android:focusable="true"
+                        android:paddingHorizontal="8dp"
                         android:paddingVertical="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -391,7 +391,7 @@
 
                         <TextView
                             android:id="@+id/reminder_label"
-                            style="@style/TextAppearance.Headline2"
+                            style="@style/TextAppearance.Headline3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Reminder"
@@ -402,7 +402,7 @@
 
                         <TextView
                             android:id="@+id/reminder_value"
-                            style="@style/TextAppearance.BodySmall"
+                            style="@style/TextAppearance.Headline2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -419,7 +419,6 @@
                             android:id="@+id/arrow_reminder"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
                             android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -429,15 +428,17 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
                     <!-- Комментарий -->
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/comment_container"
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:layout_marginTop="@dimen/dimen_16dp"
+                        android:background="@drawable/bg_selectable_rounded"
                         android:clickable="true"
+                        android:clipToOutline="true"
                         android:focusable="true"
+                        android:paddingHorizontal="8dp"
                         android:paddingVertical="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -446,7 +447,7 @@
                         <!-- Комментарий Label -->
                         <TextView
                             android:id="@+id/comment_label"
-                            style="@style/TextAppearance.Headline2"
+                            style="@style/TextAppearance.Headline3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Сomment"
@@ -458,7 +459,7 @@
                         <!-- Комментарий Value -->
                         <TextView
                             android:id="@+id/comment_value"
-                            style="@style/TextAppearance.BodySmall"
+                            style="@style/TextAppearance.Headline2"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -478,34 +479,48 @@
                             android:id="@+id/arrow_comment"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="?attr/selectableItemBackgroundBorderless"
                             android:contentDescription="Arrow"
                             android:src="@drawable/ic_arrow_forward"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
-
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </com.google.android.material.card.MaterialCardView>
 
-            <!-- Кнопка "Сохранить" -->
-            <Button
-                android:id="@+id/save_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/shape_24dp"
-                android:elevation="8dp"
-                android:enabled="false"
-                android:text="Add this platform"
-                android:textAllCaps="false"
-                android:textColor="@color/White"
-                app:backgroundTint="@color/Gray_55"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/end_border"
-                app:layout_constraintStart_toStartOf="@id/start_border" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+            </androidx.core.widget.NestedScrollView>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Кнопка "Сохранить" -->
+    <Button
+        android:id="@+id/save_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/shape_24dp"
+        android:elevation="8dp"
+        android:enabled="false"
+        android:text="Add this platform"
+        android:textAllCaps="false"
+        android:textColor="@color/White"
+        app:backgroundTint="@color/Gray_55"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/end_border"
+        app:layout_constraintStart_toStartOf="@id/start_border" />
+
+    <!-- Отcтупы -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/start_border"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="16dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/end_border"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="16dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
