--- a/app/src/main/res/layout/fragment_add_sub_search.xml
+++ b/app/src/main/res/layout/fragment_add_sub_search.xml
@@ -60,6 +60,7 @@
                 android:layout_marginStart="12dp"
                 android:text="Search subscription"
                 android:textColor="@color/Gray_30"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/back_button"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/back_button"
