--- a/app/src/main/res/layout/item_subscription.xml
+++ b/app/src/main/res/layout/item_subscription.xml
@@ -49,12 +49,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="8dp"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:freezesText="true"
             android:gravity="center_vertical"
-            android:marqueeRepeatLimit="marquee_forever"
             android:maxLines="1"
             android:scrollHorizontally="true"
             android:singleLine="true"
@@ -74,6 +73,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginStart="15dp"
+            android:ellipsize="end"
+            android:maxWidth="150dp"
             android:maxLines="1"
             android:textAllCaps="false"
             android:textColor="@color/white"
