Улучшение UX: автоскролл к началу при добавлении подписки + фикс обновления метрик
Добавлено:
- Скролл к началу списка после вставки новой подписки
- Безопасное обновление TextView метрик (safeSetText)
- Комментарии и рефакторинг `HomeFragment.kt` и `MySubViewModel.kt`

Фиксы:
- Обновление суммы подписок при смене валюты
- Проблема с незаметным появлением новой подписки

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -86,7 +86,7 @@
 
 
             <TextView
-                android:id="@+id/activeSubsCount"
+                android:id="@+id/activeSubsSum"
                 style="@style/TextAppearance.Headline6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
