Улучшения анимаций и UI экрана детали подписки
- Убран RecyclerView, элементы отображаются вручную
- Улучшены анимации раскрытия/сворачивания описания
- Мелкие правки UI и верстки

+ Добавлена вибрация и эффект нажатия для кнопки создания подписки
+ Добавлена утилита VibrationUtils
+ Анимация scale при нажатии на кнопку создания подписки на экране поиска
+ Обновлён стиль кнопки (bg_add_sub_button_search)

--- a/app/src/main/res/layout/bottom_sheet_description.xml
+++ b/app/src/main/res/layout/bottom_sheet_description.xml
@@ -35,14 +35,19 @@
         android:id="@+id/descriptionEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
         android:backgroundTint="@color/Accent_P_100"
         android:hint="Add description"
-        android:inputType="text"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        android:lines="4"
+        android:minLines="1"
+        android:scrollbars="vertical"
+        android:overScrollMode="always"
         android:textAllCaps="false"
         android:textColor="@color/White"
         android:textColorHint="@color/Gray_30"
         android:textCursorDrawable="@drawable/ic_edit_text_cursor"
+        android:imeOptions="flagNoEnterAction"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
