--- a/app/src/main/res/drawable/shape_bottom_sheet_background.xml
+++ b/app/src/main/res/drawable/shape_bottom_sheet_background.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- Прозрачный фон за углами -->
-    <item android:drawable="@color/Gray_95" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-    <!-- Основной фон с цветом и скругленными углами -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/Gray_75" />
-            <corners android:topLeftRadius="24dp" android:topRightRadius="24dp" />
-        </shape>
-    </item>
-</layer-list>
+    <solid android:color="@color/Gray_75" />
+
+    <corners
+        android:topLeftRadius="24dp"
+        android:topRightRadius="24dp" />
+</shape>
