--- a/app/src/main/res/layout/bottom_sheet_theme.xml
+++ b/app/src/main/res/layout/bottom_sheet_theme.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Choose theme"
+        android:text="Dark mode"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -42,7 +42,7 @@
         android:gravity="center"
         android:paddingVertical="12dp"
         android:layout_marginTop="16dp"
-        android:text="Light"
+        android:text="Disable"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
         android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingVertical="12dp"
-        android:text="Dark"
+        android:text="Enable"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:background="?attr/selectableItemBackground"
         android:gravity="center"
         android:paddingVertical="12dp"
-        android:text="System Default"
+        android:text="Follow system"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
