--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -16,6 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Settings"
+        android:textStyle="bold"
         android:textColor="@color/Gray_30"
         app:layout_constraintStart_toStartOf="@id/start_border"
         app:layout_constraintTop_toTopOf="parent" />
@@ -297,7 +298,7 @@
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:contentDescription="Theme"
-                            android:src="@drawable/ic_theme"
+                            android:src="@drawable/ic_moon"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -309,7 +310,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginStart="12dp"
                             android:layout_marginEnd="4dp"
-                            android:text="Theme"
+                            android:text="Dark mode"
                             android:textColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="@id/themeIcon"
                             app:layout_constraintEnd_toStartOf="@id/themeValue"
@@ -338,6 +339,116 @@
                             app:layout_constraintBottom_toBottomOf="@id/themeIcon"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@id/themeIcon" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <!-- Настройка уведомлений -->
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/notifications"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/bg_selectable_rounded"
+                        android:clickable="true"
+                        android:clipToOutline="true"
+                        android:focusable="true"
+                        android:paddingHorizontal="8dp">
+
+                        <ImageView
+                            android:id="@+id/notificationsIcon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:contentDescription="tg_notifications"
+                            android:src="@drawable/ic_bell"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/notificationsText"
+                            style="@style/TextAppearance.Headline3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginEnd="12dp"
+                            android:text="Notifications"
+                            android:textColor="@color/white"
+                            app:layout_constraintBottom_toBottomOf="@id/notificationsIcon"
+                            app:layout_constraintEnd_toStartOf="@id/notificationsSwitch"
+                            app:layout_constraintStart_toEndOf="@id/notificationsIcon"
+                            app:layout_constraintTop_toTopOf="@id/notificationsIcon" />
+
+                        <com.google.android.material.materialswitch.MaterialSwitch
+                            android:id="@+id/notificationsSwitch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            app:layout_constraintBottom_toBottomOf="@id/notificationsIcon"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/notificationsIcon"
+                            app:thumbTint="@color/switch_thumb_selector"
+                            app:trackTint="@color/switch_track_selector" />
+
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <!-- Настройка времени напоминаний -->
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/notificationsTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/bg_selectable_rounded"
+                        android:clickable="true"
+                        android:clipToOutline="true"
+                        android:focusable="true"
+                        android:paddingHorizontal="8dp"
+                        android:paddingVertical="8dp">
+
+                        <ImageView
+                            android:id="@+id/notificationsTimeIcon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:contentDescription="Theme"
+                            android:src="@drawable/ic_clock"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <TextView
+                            android:id="@+id/notificationsTimeText"
+                            style="@style/TextAppearance.Headline3"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="12dp"
+                            android:layout_marginEnd="4dp"
+                            android:text="Notification time"
+                            android:textColor="@color/white"
+                            app:layout_constraintBottom_toBottomOf="@id/notificationsTimeIcon"
+                            app:layout_constraintEnd_toStartOf="@id/notificationsTimeValue"
+                            app:layout_constraintStart_toEndOf="@id/notificationsTimeIcon"
+                            app:layout_constraintTop_toTopOf="@id/notificationsTimeIcon" />
+
+                        <TextView
+                            android:id="@+id/notificationsTimeValue"
+                            style="@style/TextAppearance.Headline3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="8dp"
+                            android:text="09:00"
+                            android:textColor="@color/Gray_30"
+                            app:layout_constraintBottom_toBottomOf="@id/notificationsTimeIcon"
+                            app:layout_constraintEnd_toStartOf="@+id/notificationsTimeArrow"
+                            app:layout_constraintTop_toTopOf="@id/notificationsTimeIcon" />
+
+                        <ImageButton
+                            android:id="@+id/notificationsTimeArrow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:contentDescription="Arrow"
+                            android:src="@drawable/ic_arrow_forward"
+                            app:layout_constraintBottom_toBottomOf="@id/notificationsTimeIcon"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="@id/notificationsTimeIcon" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -384,9 +495,8 @@
                             app:layout_constraintBottom_toBottomOf="@id/tgIcon"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="@id/tgIcon"
-                            app:thumbIconTint="@color/white"
-                            app:trackColorActive="@color/Accent_P_100"
-                            app:trackColorInactive="@color/Gray_40" />
+                            app:thumbTint="@color/switch_thumb_selector"
+                            app:trackTint="@color/switch_track_selector"  />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -410,6 +520,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="@dimen/dimen_16dp"
                 app:cardBackgroundColor="@color/Gray_75"
                 app:cardCornerRadius="12dp">
 
