--- a/app/src/main/res/values-ru/string.xml
+++ b/app/src/main/res/values-ru/string.xml
@@ -43,4 +43,6 @@
     <string name="month_12">Декабрь</string>
 
     <string name="month_title">%1$s %2$d</string>
+    <string name="notifications_not_enabled">Уведомления не включены</string>
+
 </resources>
