--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,7 +110,7 @@
     </style>
 
 
-    <style name="RoundedDialog" parent="Theme.MaterialComponents.Dialog">
+    <style name="CustomAlertDialog" parent="Theme.MaterialComponents.Dialog">
         <item name="android:windowBackground">@drawable/bg_rounded_16</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowMinWidthMajor">80%</item>
